// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`investor Home it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  display: inline-block;
  width: 100%;
  max-width: 720px;
  min-height: 240px;
  overflow: hidden;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c19 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 24px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  margin-bottom: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 24px;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 24px;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c23 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c24 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c24:hover {
  opacity: 0.8;
}

.c25 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c25:hover {
  opacity: 0.8;
}

.c6 {
  width: 40px;
  height: 40px;
}

.c12 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c8 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c13 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c16 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c18 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #bacbf7;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c18:hover {
  background: #bacbf7;
  cursor: initial;
}

.c18:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c14 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c21 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: core.primary;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding-left: 0;
  padding-right: 0;
  padding-top: 0;
  padding-bottom: 0;
  height: auto;
  border: none;
  border-width: 1px;
  border-radius: 4px;
  background-color: transparent;
  color: #5E26FF;
  cursor: pointer;
  outline: none;
}

.c21:hover {
  opacity: 0.8;
}

.c21:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
  display="flex"
  width="100%"
>
  <div
    class="c1"
    display="inline-block"
    overflow="hidden"
    width="100%"
  >
    <ul
      class="c2"
      display="flex"
      width="100%"
    >
      <div
        class="c3"
        display="flex"
      >
        <li
          class="c4"
          display="flex"
        >
          <div
            class="c5"
            color="#000"
            display="flex"
            size="6"
          >
            <svg
              class="c6"
              fill="none"
              height="40px"
              viewBox="0 0 24 24"
              width="40px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                fill="#333333"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </li>
        
      </div>
      <li
        class=""
      >
        <div
          class="c7"
          display="flex"
        >
          <p
            class="c8"
            color="core.nearblack"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Step 
            4
          </p>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c11"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
        </div>
      </li>
    </ul>
    <h2
      class="c12"
      font-family="RT-Alias-Grotesk"
      font-size="4"
      font-weight="400"
    >
      Confirm ID and Filecoin address
    </h2>
    <p
      class="c13"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Once confirmed, we'll generate a unique string for you to copy/paste into your CoinList account.
    </p>
    <div
      class="c14"
    >
      <div
        class="c9"
        display="flex"
      >
        <div
          class="c15"
          display="flex"
        >
          <h4
            class="c16"
            color="core.nearblack"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            InvestorID
          </h4>
        </div>
        <div
          class="c17"
          display="flex"
        >
          <input
            class="c18"
            disabled=""
            display="inline-block"
            height="6"
            placeholder="InvestorID"
            value="Qmcv45ZPc3oEwsbcHMRcs3AG59Rp8EUFr6Dm512KUswpRA"
            width="100%"
          />
          
        </div>
      </div>
    </div>
    <div
      class="c19"
      display="flex"
    >
      <div
        class="c20"
        display="flex"
        height="4"
        width="100%"
      >
        <button
          class="c21"
          color="core.primary"
          font-size="3"
          height="auto"
        >
          Show address on device
        </button>
      </div>
      <div
        class="c14"
      >
        <div
          class="c9"
          display="flex"
        >
          <div
            class="c15"
            display="flex"
          >
            <h4
              class="c16"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Filecoin address
            </h4>
          </div>
          <div
            class="c17"
            display="flex"
          >
            <input
              class="c18"
              disabled=""
              display="inline-block"
              height="6"
              placeholder="Filecoin address"
              value="t1z225tguggx4onbauimqvxzutopzdr2m4s6z6wgi"
              width="100%"
            />
            
          </div>
        </div>
      </div>
      <div
        class="c22"
        display="flex"
        height="4"
        width="100%"
      />
    </div>
  </div>
  <div
    class="c23"
    display="flex"
    width="100%"
  >
    <button
      class="c24"
      font-size="3"
      height="6"
      type="button"
    >
      Back
    </button>
    <button
      class="c25"
      font-size="3"
      height="6"
      type="button"
    >
      Generate string
    </button>
  </div>
</div>
`;

exports[`investor Home it sends the magic string to PL 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  min-height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  display: inline-block;
  width: 100%;
  max-width: 720px;
  min-height: 240px;
  overflow: hidden;
}

.c3 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c9 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c17 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  max-width: 560px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c13 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c18 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c18:hover {
  opacity: 0.8;
}

.c19 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c19:hover {
  opacity: 0.8;
}

.c6 {
  width: 40px;
  height: 40px;
}

.c11 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c8 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c12 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c15 {
  background-color: #E4EBFC;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  padding: 8px;
}

.c2 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 {
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-bottom: 2px solid #5E26FF00;
  color: #5E26FF;
  font-size: 1.25rem;
  margin: 0;
}

.c14:hover {
  cursor: pointer;
  border-bottom: 2px solid #5E26FF;
}

.c16 {
  word-break: break-all;
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
  display="flex"
  width="100%"
>
  <div
    class="c1"
    display="inline-block"
    overflow="hidden"
    width="100%"
  >
    <ul
      class="c2"
      display="flex"
      width="100%"
    >
      <div
        class="c3"
        display="flex"
      >
        <li
          class="c4"
          display="flex"
        >
          <div
            class="c5"
            color="#000"
            display="flex"
            size="6"
          >
            <svg
              class="c6"
              fill="none"
              height="40px"
              viewBox="0 0 24 24"
              width="40px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                fill="#333333"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </li>
        
      </div>
      <li
        class=""
      >
        <div
          class="c7"
          display="flex"
        >
          <p
            class="c8"
            color="core.nearblack"
            font-family="RT-Alias-Grotesk"
            font-size="2"
            font-weight="400"
          >
            Step 
            5
          </p>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
          <div
            class="c9"
            display="flex"
          >
            <div
              class="c10"
              display="inline-block"
              height="2"
              width="2"
            />
          </div>
        </div>
      </li>
    </ul>
    <h2
      class="c11"
      font-family="RT-Alias-Grotesk"
      font-size="4"
      font-weight="400"
    >
      Almost done!
    </h2>
    <p
      class="c12"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Please log in to your CoinList account and paste this string in exactly how it appears.
    </p>
    <p
      class="c12"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      You do not need to save this magic string.
    </p>
    <div
      class="c13"
      display="flex"
    >
      <p
        class="c14"
        color="core.primary"
        font-size="3"
      >
        Copy string
      </p>
      <p
        class="c15 c16"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        74317a323235746775676778346f6e626175696d7176787a75746f707a6472326d3473367a367767692c516d637634355a5063336f4577736263484d52637333414735395270384555467236446d3531324b5573777052413a61633465653536613537316335643965326437383831623364333136313364626430666638636330626161663137626665326237333363616363643137333632
      </p>
    </div>
  </div>
  <div
    class="c17"
    display="flex"
    width="100%"
  >
    <button
      class="c18"
      font-size="3"
      height="6"
      type="button"
    >
      Back
    </button>
    <button
      class="c19"
      font-size="3"
      height="6"
      type="button"
    >
      Login to CoinList
    </button>
  </div>
</div>
`;

exports[`investor Investor Onboard it rejects bad investor IDs correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  max-width: 560px;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 240px;
  overflow: hidden;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c22 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  padding-top: 8px;
  margin-bottom: 0;
  text-align: right;
}

.c23 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c23:hover {
  opacity: 0.8;
}

.c24 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c24:hover {
  opacity: 0.8;
}

.c7 {
  width: 40px;
  height: 40px;
}

.c13 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c9 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c14 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c17 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c21 {
  color: #FC6D6F;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  text-align: right;
  margin: 0;
}

.c19 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #FC6D6F;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c19:hover {
  background: #FC6D6F;
  cursor: text;
}

.c19:focus {
  box-shadow: 0;
  outline: 0;
  background: #FC6D6F;
}

.c15 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    width="100%"
  >
    <div
      class="c2"
      display="inline-block"
      overflow="hidden"
      width="100%"
    >
      <ul
        class="c3"
        display="flex"
        width="100%"
      >
        <div
          class="c4"
          display="flex"
        >
          <li
            class="c5"
            display="flex"
          >
            <div
              class="c6"
              color="#000"
              display="flex"
              size="6"
            >
              <svg
                class="c7"
                fill="none"
                height="40px"
                viewBox="0 0 24 24"
                width="40px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                  fill="#333333"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </li>
          
        </div>
        <li
          class=""
        >
          <div
            class="c8"
            display="flex"
          >
            <p
              class="c9"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Step 
              1
            </p>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c11"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
          </div>
        </li>
      </ul>
      <h2
        class="c13"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Investor ID
      </h2>
      <p
        class="c14"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Please input your investor ID below to continue 
      </p>
      <div
        class="c15"
      >
        <div
          class="c10"
          display="flex"
        >
          <div
            class="c16"
            display="flex"
          >
            <h4
              class="c17"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              ID
            </h4>
          </div>
          <div
            class="c18"
            display="flex"
          >
            <input
              class="c19"
              display="inline-block"
              height="6"
              placeholder="ID"
              value="bad investor id"
              width="100%"
            />
            
          </div>
        </div>
      </div>
      <div
        class="c20"
      >
        <h4
          class="c21"
          color="status.fail.background"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Invalid investor ID.
        </h4>
      </div>
    </div>
    <div
      class="c22"
      display="flex"
      width="100%"
    >
      <button
        class="c23"
        font-size="3"
        height="6"
        type="button"
      >
        Back
      </button>
      <button
        class="c24"
        font-size="3"
        height="6"
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`investor Investor Onboard it renders correctly 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 100vh;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  width: 100%;
  max-width: 560px;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border: 1px solid;
  border-radius: 4px;
  border-width: 1px;
  padding: 16px;
  display: inline-block;
  width: 100%;
  max-width: 560px;
  min-height: 240px;
  overflow: hidden;
}

.c4 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c6 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  color: #000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c8 {
  min-width: 0;
  box-sizing: border-box;
  margin-left: 24px;
  margin-top: 0;
  margin-bottom: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c10 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c11 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #1AD08F;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c12 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 100px;
  margin-left: 4px;
  margin-right: 4px;
  background-color: #C4C4C4;
  display: inline-block;
  width: 8px;
  height: 8px;
}

.c16 {
  min-width: 0;
  box-sizing: border-box;
  margin-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-width: 48px;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c18 {
  min-width: 0;
  box-sizing: border-box;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c20 {
  min-width: 0;
  box-sizing: border-box;
  margin-top: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c21 {
  cursor: pointer;
  border: 1px solid #262626;
  background-color: transparent;
  border-color: #262626;
  color: #262626;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-right: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c21:hover {
  opacity: 0.8;
}

.c22 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: 48px;
  border-width: 1px;
  border-radius: 4px;
}

.c22:hover {
  opacity: 0.8;
}

.c7 {
  width: 40px;
  height: 40px;
}

.c13 {
  font-size: 1.5rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 16px;
}

.c9 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin-right: 8px;
  margin-top: 0;
  margin-bottom: 0;
}

.c14 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c17 {
  color: #262626;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c19 {
  min-width: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  padding-left: 8px;
  padding-right: 8px;
  border-radius: 1px;
  -webkit-transition: 0.2s ease-in-out;
  transition: 0.2s ease-in-out;
  font-size: 1.125rem;
  text-align: left;
  cursor: text;
  background: #d1ddfa;
  padding-left: 16px;
  padding-right: 16px;
  display: inline-block;
  height: 48px;
  width: 100%;
  border-radius: 4px;
  border: 0;
  border-color: #999999;
}

.c19:hover {
  background: #bacbf7;
  cursor: text;
}

.c19:focus {
  box-shadow: 0;
  outline: 0;
  background: #bacbf7;
}

.c15 {
  display: inline-block;
  width: 100%;
  border-radius: 1px;
}

.c3 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  border-color: silver;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c5 {
  margin-right: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:40em) {
  .c0 {
    padding: 16px;
  }
}

@media screen and (min-width:52em) {
  .c0 {
    padding: 32px;
  }
}

<div
  class="c0"
  display="flex"
>
  <div
    class="c1"
    width="100%"
  >
    <div
      class="c2"
      display="inline-block"
      overflow="hidden"
      width="100%"
    >
      <ul
        class="c3"
        display="flex"
        width="100%"
      >
        <div
          class="c4"
          display="flex"
        >
          <li
            class="c5"
            display="flex"
          >
            <div
              class="c6"
              color="#000"
              display="flex"
              size="6"
            >
              <svg
                class="c7"
                fill="none"
                height="40px"
                viewBox="0 0 24 24"
                width="40px"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M10.0934 4H17.4067H17.4148C18.8148 4 19.9676 5.15197 19.9676 6.55279V13.866H10.0934V4ZM6.55349 4.00065H7.81386V7.81378H4.00065V6.55344C4.00065 5.15342 5.15345 4.00065 6.55349 4.00065ZM4 10.0934H7.81321V13.9066H4V10.0934ZM17.4479 19.9679H16.1875V16.1869H20.0007V17.4071V17.4151C20.0007 18.8151 18.8487 19.9679 17.4479 19.9679ZM10.0938 16.1869H13.907V20H10.0938V16.1869ZM4 17.4472V16.1869H7.81321V20H6.55284C5.15279 20 4 18.8472 4 17.4472Z"
                  fill="#333333"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </li>
          
        </div>
        <li
          class=""
        >
          <div
            class="c8"
            display="flex"
          >
            <p
              class="c9"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              Step 
              1
            </p>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c11"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
            <div
              class="c10"
              display="flex"
            >
              <div
                class="c12"
                display="inline-block"
                height="2"
                width="2"
              />
            </div>
          </div>
        </li>
      </ul>
      <h2
        class="c13"
        font-family="RT-Alias-Grotesk"
        font-size="4"
        font-weight="400"
      >
        Investor ID
      </h2>
      <p
        class="c14"
        font-family="RT-Alias-Grotesk"
        font-size="2"
        font-weight="400"
      >
        Please input your investor ID below to continue 
      </p>
      <div
        class="c15"
      >
        <div
          class="c10"
          display="flex"
        >
          <div
            class="c16"
            display="flex"
          >
            <h4
              class="c17"
              color="core.nearblack"
              font-family="RT-Alias-Grotesk"
              font-size="2"
              font-weight="400"
            >
              ID
            </h4>
          </div>
          <div
            class="c18"
            display="flex"
          >
            <input
              class="c19"
              display="inline-block"
              height="6"
              placeholder="ID"
              value=""
              width="100%"
            />
            
          </div>
        </div>
      </div>
      
    </div>
    <div
      class="c20"
      display="flex"
      width="100%"
    >
      <button
        class="c21"
        font-size="3"
        height="6"
        type="button"
      >
        Back
      </button>
      <button
        class="c22"
        font-size="3"
        height="6"
        type="button"
      >
        Submit
      </button>
    </div>
  </div>
</div>
`;
